RESOLVED FIXED129956
Comment in RenderStyle is no longer accurate
https://bugs.webkit.org/show_bug.cgi?id=129956
Summary Comment in RenderStyle is no longer accurate
Myles C. Maxfield
Reported 2014-03-07 19:53:55 PST
Comment in RenderStyle is no longer accurate
Attachments
Patch (1.85 KB, patch)
2014-03-07 19:55 PST, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2014-03-07 19:55:54 PST
WebKit Commit Bot
Comment 2 2014-03-07 21:19:21 PST
Comment on attachment 226199 [details] Patch Clearing flags on attachment: 226199 Committed r165324: <http://trac.webkit.org/changeset/165324>
WebKit Commit Bot
Comment 3 2014-03-07 21:19:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.