Source/WebCore/rendering/style/RenderStyle.cpp
@@ -111,9 +111,6 @@ PassRef<RenderStyle> RenderStyle::createStyleInheritingFromPseudoStyle(const Ren
 {
     ASSERT(pseudoStyle.styleType() == BEFORE || pseudoStyle.styleType() == AFTER);
 
-    // Images are special and must inherit the pseudoStyle so the width and height of
-    // the pseudo element doesn't change the size of the image. In all other cases we
-    // can just share the style.
     auto style = RenderStyle::create();
     style.get().inheritFrom(&pseudoStyle);
     return style;
